Builds with stack lts-9.0 resolver
- I may have unintentionally changed some behaviors in this commit. I
  added a few TODO comments to indicate this.
- There is annoying line noise in this commit because my editor strips
  whitespace and I didn't disable it until I had modified several files.

--- a/aima-haskell.cabal
+++ b/aima-haskell.cabal
@@ -39,6 +39,7 @@ Library
                         array,
                         gnuplot,
                         hmatrix,
+                        hmatrix-gsl,
                         QuickCheck
     Exposed-Modules:    AI.Core.Agents
                         AI.Search.Core
