Pull GraphMap out into separate module, for convenience

--- a/aima-haskell.cabal
+++ b/aima-haskell.cabal
@@ -80,6 +80,7 @@ Library
                         AI.Test.Util
                         AI.Util.Array
                         AI.Util.Graph
+                        AI.Util.GraphMap
                         AI.Util.Matrix
                         AI.Util.ProbDist
                         AI.Util.Queue
